deleted unnecessary text

--- a/includes/FormLogin.html
+++ b/includes/FormLogin.html
@@ -19,9 +19,9 @@
 			<input id="login" type="button" name="" value="Login">
 			<br>
 			<p>
-			<a href="#">Forgot Your Password?</a><p>
+			<!-- <a href="#">Forgot Your Password?</a><p> -->
 			<!-- <a href="FormSignup.html">Register</a> -->
-			<a href="#" title="">Register</a>
+			<!-- <a href="#" title="">Register</a> -->
 			</p>
 		</div>	
 		
