--- a/includes/FormLogin.html
+++ b/includes/FormLogin.html
@@ -13,7 +13,7 @@
 		<div class="input-box">
 			<input id="username" type="text" name="username" placeholder="User Name" >
 			<div id="errorName" class="errorName"></div>
-			<input id="password" type="text" name="password" placeholder="Password">
+			<input id="password" type="password" name="password" placeholder="Password">
 			<div id="errorPassword" class="errorPassword"></div>
 			<br>
 			<input id="login" type="button" name="" value="Login">
